--- a/index.html
+++ b/index.html
@@ -1,17 +1,77 @@
 <html>
 
-<script src="index.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <style>
+      .container{
+                  display: flex;
+                }
+    </style>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="./index.js"></script>
+    
+  </head>
 
 <body>
-<h1>My First Website</h1>
-<p>Hello IoT!</p>
 
-My name is: <input id="myName" type="text" placeholder="name"/>
-<button class="btn btn-success" onclick="greeting()">Sumbit</button>
-<br>
-<span id="greet"> </span>
-<br>
-<span id="greet_from_server"> </span>
+    <div class="container">
+  
+        <div class="jumbotron">
+        <h1>PiCar-X Remote</h1>
+        <h2>CS498: IoT -- Lab 2</h2>
+  
+        <!-- <video class="center" width="600" height="400" controls>
+          <source src="samplevid.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video> -->
+        <img src="http://192.168.1.65:9000/mjpg" width="300" height="200" id='pics'>
+      </div>   
+    </div> 
+
+<div class="row">      
+    <div class="Container">    
+        <div class="jumbotron text-center col-md-6">
+
+        <span>&nbsp;&nbsp;</span>         
+        <button id="upArrow" class="btn btn-primary" style='font-size:50px; color:grey;' onclick="upArrow()">&#8679;</button>
+        <br>        
+        <span id="leftArrow" class="btn btn-primary" style='font-size:45px; color:grey;' onclick="leftArrow()">&#8678;</span>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> 
+        <span id="rightArrow" class="btn btn-primary" style='font-size:45px; color:grey;' onclick="rightArrow()">&#8680;</span>
+        <br>
+        <span>&nbsp;&nbsp;</span> 
+        <span id="downArrow" class="btn btn-primary" style='font-size:50px; color:grey;' onclick="downArrow()">&#8681;</span>
+        <br>
+
+        My name is: <input id="myName" type="text" placeholder="name"/>
+
+        <button class="btn btn-success" onclick="update_data()">Sumbit</button>
+
+        <p>
+            <span id="direction_dot" style="color:Green">&bull;</span> Car Direction: <span id="direction"> </span>
+           <br>
+           <span id="speed_dot" style="color:green">&bull;</span> Speed: <span id="speed">0.0</span>  
+           <br>
+           <span id="distance_dot" style="color:green">&bull;</span> Obstacle Distance: <span id="distance">0.0</span>
+           <br>
+           <span id="battery_dot" style="color:green">&bull;</span> Battery Volatge: <span id="battery">0.0</span>
+           <br>
+           <span id="steering_dot" style="color:green">&bull;</span> Steering Angle: <span id="steering">0.0</span>
+           <br>
+          </p>  
+
+        <br>
+        <span id="greet"> </span>
+        <br>
+        <span id="greet_from_server"> </span>
+    
+
+        </div>    
+    </div>
+    <div class="Container">    
+        <p>KyoSook Shin(kyosook2), Mohammad Tamim(tamim2), Jacob Fuehne(jfuehne2), Jeffery Fan(jfan16)</p>
+    </div>
+</div>
 </body>
-
 </html>
